<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--  Global -->
    <string name="app_name">CyanogenMod Update Notifications</string>
    <string name="txt_register">Register</string>
    <string name="txt_unregister">Unregister</string>
    <string name="unknown">\?</string>
    
    <!-- Notification -->
    <string name="txt_notif_ticker">CyanogenMod Update Available</string>
    <string name="txt_notif_title">Update Available</string>
    <string name="txt_notif_long">A CyanogenMod update is available!</string>

    <!-- Main Activity -->
    <string name="title_main">CyanogenMod Update Notifications</string>
    <string name="txt_registration_success">Registration Successful</string>
    <string name="txt_registration_failure">Registration Failed</string>
    <string name="txt_unregistration_success">Unregistration Successful</string>
    <string name="txt_unregistration_failure">Unregistration Failed</string>
    <string name="txt_registering">Registering/u2026 Please Wait</string>
    <string name="txt_unregistering">Unregistering/u2026 Please Wait</string>
    <string name="txt_main_description">To enable push notifications of new versions,
        you must register your device with the update servers.</string>
    <string name="txt_main_stable">Stable Releases</string>
    
    <string name="txt_main_nightly">Nightly Builds</string>
    <string name="txt_main_license">A ROM Manager Premium license is required to enable this feature!</string>
    
    <!--  Download Activity -->
    <string name="txt_download_update_info">Update Information</string>
    <string name="txt_download_old_version">Old Version</string>
    <string name="txt_download_new_version">New Version</string>
    <string name="txt_download_download">Download</string>
</resources>
