<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:padding="10dip">
    <TextView android:text="@string/txt_download_update_info" android:id="@+id/TextView01"
        android:textColor="#FFFFFF" android:textStyle="bold"
        android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
    <TableLayout android:id="@+id/TableLayout01"
        android:paddingTop="10dip" android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TableRow android:id="@+id/TableRow01"
            android:layout_width="wrap_content" android:layout_height="wrap_content">

            <TextView android:text="@string/txt_download_old_version"
                android:id="@+id/TextView01" android:textColor="#FFFFFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></TextView>

            <TextView android:text="@string/unknown" android:id="@+id/txt_current_version"
                android:textColor="#FFFFFF" android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dip"></TextView>

        </TableRow>
        <TableRow android:id="@+id/TableRow01"
            android:layout_width="wrap_content" android:layout_height="wrap_content">

            <TextView android:text="@string/txt_download_new_version" android:id="@+id/TextView01"
                android:textColor="#FFFFFF" android:layout_width="wrap_content"
                android:layout_height="wrap_content"></TextView>

            <TextView android:text="@string/unknown" android:id="@+id/txt_new_version"
                android:textColor="#FFFFFF" android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dip"></TextView>

        </TableRow>

    </TableLayout>
    <Button android:text="@string/txt_download_download" android:id="@+id/btn_download"
        android:layout_marginTop="20dip" android:layout_width="wrap_content"
        android:layout_height="wrap_content"></Button>
</LinearLayout>
